tests/examples/failing/CppComment.hs.bad
{-# LANGUAGE CPP #-}
module CppComment where

trace_options =

#if 0
    x
#endif
    y
